--- a/admin-frontend/public/index.html
+++ b/admin-frontend/public/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Personal Blog</title>
+    <title>Blog Admin Interface</title>
+    <style type="text/css">
+      html {
+        font-family: helvetica;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
@@ -21,7 +26,7 @@
         );
       }
     </script>
-    <script src="http://dockerhost:3001/webpack-dev-server.js"></script>
+    <script src="http://dockerhost:3003/webpack-dev-server.js"></script>
     <script src="/js/app.js"></script>
   </body>
 </html>
